# cs3203-spa

./: README.md
Team20/Code20/src/spa/: CMakeLists.txt
Team20/Code20/src/spa/src/: ModifyStore.cpp  ModifyStore.h  PKB.cpp  PKB.h  UsageStore.cpp  UsageStore.h
Team20/Code20/src/spa/src/components/: common_declarations.h
Team20/Code20/src/spa/src/components/pkb/: ModifyStore.cpp  ModifyStore.h  PKB.cpp  PKB.h  ParentStore.cpp  ParentStore.h  UsageStore.cpp  UsageStore.h  common.h  expression_tree.cpp  expression_tree.h  follow_store.cpp  follow_store.h  modify_store.cpp  modify_store.h  parent_store.cpp  parent_store.h  pkb.cpp  pkb.h  pkb_declarations.h  pkb_relationship.cpp  pkb_relationship.h  relationship.cpp  relationship.h  stack_node.h  tree_node.h  usage_store.cpp  usage_store.h
Team20/Code20/src/spa/src/components/pkb/design_extractor/: design_extractor.cpp  design_extractor.h  populator.cpp  populator.h
Team20/Code20/src/spa/src/components/pkb/pkb_client/: pkb_client.cpp  pkb_client.h
Team20/Code20/src/spa/src/components/pkb/stores/: affect_session.cpp  affect_session.h  affect_store.cpp  affect_store.h  bi_directional_store.cpp  bi_directional_store.h  call_store.cpp  call_store.h  follow_store.cpp  follow_store.h  follows_parent_store.cpp  follows_parent_store.h  follows_store.cpp  follows_store.h  modifies_store.cpp  modifies_store.h  modify_store.cpp  modify_store.h  next_store.cpp  next_store.h  parent_store.cpp  parent_store.h  pattern_store.cpp  pattern_store.h  statement_store.cpp  statement_store.h  stmt_stmt_store.cpp  stmt_stmt_store.h  stmt_var_store.cpp  stmt_var_store.h  store.cpp  store.h  uni_directional_store.cpp  uni_directional_store.h  usage_store.cpp  usage_store.h  uses_modifies_store.cpp  uses_modifies_store.h  uses_store.cpp  uses_store.h
Team20/Code20/src/spa/src/components/query_subsystem/: QueryController.cpp  QueryController.h  query_controller.cpp  query_controller.h  utils.cpp  utils.h
Team20/Code20/src/spa/src/components/query_subsystem/exceptions/: invalid_query_format.cpp  invalid_query_format.h  unrecognised_token.cpp  unrecognised_token.h
Team20/Code20/src/spa/src/components/query_subsystem/pql/: PqlLexer.cpp  PqlLexer.h  PqlToken.cpp  PqlToken.h  pql_lexer.cpp  pql_lexer.h  pql_token.cpp  pql_token.h
Team20/Code20/src/spa/src/components/query_subsystem/pql_evaluator/: affects_clause.cpp  affects_clause.h  clause.h  (+56 more)
Team20/Code20/src/spa/src/components/source_subsystem/: Parser.cpp  SourceController.cpp  SourceController.h  SourceToken.cpp  SourceToken.h  design_extractor.cpp  design_extractor.h  node.cpp  node.h  pkb_client.cpp  pkb_client.h  populator.cpp  populator.h  source_controller.cpp  source_controller.h  source_declarations.h  source_lexer.cpp  source_lexer.h  source_parser.cpp  source_parser.h  source_parser_session.cpp  source_parser_session.h  source_token.cpp  source_token.h  tnode.h
Team20/Code20/src/spa/src/pql/: PqlLexer.cpp  PqlToken.cpp  PqlToken.h  Query.h
Team20/Code20/src/spa/src/utils/: FileUtil.cpp  FileUtil.h  file_util.cpp  file_util.h  pair_hash.h
Team20/Code20/src/unit_testing/: CMakeLists.txt
Team20/Code20/src/unit_testing/src/: TestAST.cpp  TestPqlLexer.cpp  pkb_stub.h  pkb_test.cpp  sample_token.cpp  sample_token.h  test_design_extractor.cpp  test_pql_lexer.cpp  test_query_builder.cpp  test_query_result.cpp  test_query_validator.cpp  test_source_lexer.cpp  test_source_parser.cpp  test_source_token.cpp  test_util.h
Team20/Code20/src/unit_testing/src/pkb/: follow_store_stub.h  follow_store_test.cpp  next_store_stub.h  next_store_test.cpp  pkb_stub.h  pkb_test.cpp  usage_store_stub.h  usage_store_test.cpp  usage_store_test.h
Team20/Code20/src/unit_testing/src/pql/: test_pql_lexer.cpp
Team20/Code20/src/unit_testing/src/query_subsystem/pql_evaluator/: test_table.cpp
Team20/Code20/src/unit_testing/src/source_subsystem/: test_source_token.cpp
(+389 files in other folders)
